front-end/src/components/navbar/Navbar.scss
.mainnavbar {
    position: sticky;
    background-color: white;
    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.112);
    // border-bottom: 1px solid rgba(128, 128, 128, 0.485);
    height: 75px;
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-inline: 10px;
    padding-block: 5px;

    .optiLogo {
        height: 100%;
    }

    .mainnavbar-right {
        display: flex;

        .mainnavbar-links {
            font-family: "Roboto", sans-serif;
            font-weight: 300;
            font-style: normal;
            display: flex;
            margin-right: 10px;
    
            .link {
                padding-inline: 15px;
                display: flex;
                justify-content: center;
                align-items: center;
                text-decoration: none;
                color: black;
            }

            .link.active {
                color: white;
                background-color: #1d3354;
                border-radius: 30px;
            }

            .link:not(.active):hover {
                color: gray;
            }
        }
    }
}

